# waterbee_controller

./: .gitignore  BUILD_VSCODE.md  CMakeLists.txt  DEVELOPER_BRIEF.md  ESP32_TRANSITION_PLAN.md  GEMINI_BRIEF.md  README.md  arm-none-eabi.cmake  build.bat  build_output.txt  flash.bat
FlashDownload/: ID_Solution.Opt  ID_Solution.Uv2  ID_Solution.plg  ID_Solution.uvgui.82105  ID_Solution.uvgui.FreeMan  ID_Solution.uvgui.Strider  ID_Solution.uvgui.ju  ID_Solution.uvproj
FlashDownload/FATFS_V0.08A/src/: integer.h
FlashDownload/IMAGE/: BELL_30x30.h  CAUTION_40x32.h  Cl_40x40.h  NumberWhite_15x17.H  SD_30x30.h  WATERBEE_1.h  WATERBEE_2.h  WATERBEE_3.h  WATERBEE_4.h  WATERBEE_5.h  WATERBEE_6.h  WORKING_35x30.h  back_all1.h  back_all2.h  back_corner.h  set10_sensor_error1.h  set10_sensor_error2.h  set10_sensor_error3.h  set10_sensor_ok.h  set11_manwash.h  set11_run1.h  set11_run2.h  set11_running.h  set11_stop1.h  set11_stop2.h  set12_ph4_1.h  set12_ph4_2.h  set12_ph7_1.h  set12_ph7_2.h  set2_analog1.h  set2_analog2.h  set2_calib1.h  set2_calib2.h  set2_comm1.h  set2_comm2.h  set2_relay1.h  set2_relay2.h  set2_time1.h  set2_time2.h  set3_buff1.h  (+49 more)
FlashDownload/IMAGE_ETC/: 20ma.h  4_20mA.h  4ma.h  NTU_1.h  RS_232.h  RS_485.h  back_graph_1.h  back_graph_2.h  back_graph_3.h  comm_baud.h  comm_databit.h  comm_method.h  comm_number.h  day.h  hour.h  mV_1.h  message1.h  message2.h  message3.h  message4.h  message5.h  message6_1.h  message6_2.h  mgl_1.h  mgl_2.h  mgl_3.h  min.h  mon.h  ntu_3.h  ph.h  ph10.h  ph4.h  ph7.h  range1.h  range2.h  sec.h  set_period.h  set_time.h  uscm.h  uscm_3.h  (+4 more)
FlashDownload/IMAGE_ETHERNET/: Ethernet.h  Ethernet2.h  Gateway.h  IPaddr.h  Port.h  Subnet.h
FlashDownload/IMAGE_GRAPH/: Bgraph1_1.h  Bgraph1_2.h  graph1_1.h  graph1_2.h  graph1_3.h  graph2_1.h  graph2_2.h  graph2_3.h  graph2_4.h  graph3_1.h  graph3_2.h  graph3_3.h  graph3_4.h  graph4_1.h  graph4_2.h  graph4_3.h  trend_hour1.h  trend_hour2.h  trend_hour3.h  trend_hour4.h  trend_hour5.h  trend_hour6.h
FlashDownload/IMAGE_NAME/: CL1.h  CL2.h  act_manual.h  act_set.h  alarm.h  alarm_off.h  analog.h  autoalarm.h  autowash.h  buffer.h  buffer_W.h  comm.h  diag.h  elec.h  filter.h  home.h  hystory.h  init.h  manwash.h  name_back.h  nongdo_range.h  o2.h  offset.h  slope.h  span.h  span_W.h  temp.h  temp_W.h  time.h  time_range.h  value_scale.h  zero.h  zero_W.h
FlashDownload/IMAGE_NUMERIC/: 12x16_BLK_GRAY.H  12x16_BLK_W.H  12x16_BLUE_GRAY.H  12x16_BLUE_W.H  18x23_BLK_GRAY.H  18x23_BLK_WHITE.H  23x28_BLK_GRAY.H  23x28_BLK_WHITE.H  33x46_BLK_WHITE.h  36x46_BLK_WHITE.h  42x54_BLK_WHITE.h  8x10_BLK_White.h  8x10_BLUE_GRAY.H  8x10_BLUE_White.H
FlashDownload/IMAGE_OVAL/: back_oval2.h  back_oval2_c.h  back_oval2_hr.h  back_oval2_mgl.h  back_oval2_min.h  back_oval2_ntu.h  back_oval2_uscm.h  back_oval3.h  back_oval3_mgl.h  back_oval3_min.h  back_oval3_ntu.h  back_oval3_uscm.h  back_oval4.h  back_oval4_mgl.h  back_oval4_min.h  back_oval4_ntu.h  back_oval4_uscm.h  back_oval6.h  back_oval_100x30.h  back_oval_100x30_old.h  back_oval_140x42.h
FlashDownload/IMAGE_ch2_ch4/: 2ch_cl.c  2ch_ec.c  2ch_home_number.c  2ch_ph.c  2ch_set_cl1.c  2ch_set_cl2.c  2ch_set_ec1.c  2ch_set_ec2.c  2ch_set_ph1.c  2ch_set_ph2.c  2ch_set_tu1.c  2ch_set_tu2.c  2ch_small_unit_ec.c  2ch_small_unit_ph.c  2ch_temp_number.c  2ch_tu.c  2ch_unit_cl.c  2ch_unit_ec.c  2ch_unit_ph.c  2ch_unit_tu.c  4ch_cl.c  4ch_ec.c  4ch_home_number.c  4ch_ph.c  4ch_set_cl1.c  4ch_set_cl2.c  4ch_set_ec1.c  4ch_set_ec2.c  4ch_set_ph1.c  4ch_set_ph2.c  4ch_set_tu1.c  4ch_set_tu2.c  4ch_small_unit_ec.c  4ch_small_unit_ph.c  4ch_temp_number.c  4ch_tu.c  4ch_unit_cl.c  4ch_unit_ec.c  4ch_unit_ph.c  4ch_unit_tu.c  (+1 more)
FlashDownload/Include_Files/: Initialize.h  Interrupt.h  Main.h  NAND.h  NandInterface.h  stm32f10x_conf.h
FlashDownload/Source_Files/: Button.c  Communication.c  CurrentSorceTrans.c  DAC7512Interface.c  Display.c  FILE_BACK1.c  FILE_BACK2.c  FILE_CH2_CH4.c  FILE_ETC1.c  FILE_ETHERNET1.c  FILE_GRAPH1.c  FILE_GRAPH2.c  FILE_ICON.c  FILE_NAME1.c  FILE_NUMERIC.c  FILE_oval.c  FILE_set1.c  FILE_set2.c  FILE_set3.c  Initialize.c  Interrupt.c  MicroSd.c  NAND.c  NANDDisplay.c  NandInterface.c  NandInterface0.c  RTC_Time.c  ReDisplay.c  Tft.c  Touch2.c  eeprom.c  main.c  main0.c  serial.c
Working/: COMM_CHANGES_SUMMARY.md  COMM_STRUCTURE_INVESTIGATION.md  ID_Solution.uvgui.ju  ID_Solution.uvproj  ID_Solution.uvprojx  OPTIMIZATION_STRATEGY_REPORT.md  SENSOR_PH_EC_BRANCH_AUDIT.md  SENSOR_STRUCTURE_REPORT.md  STM32F103VETx_FLASH.ld  startup_stm32f10x_hd_gcc.s
Working/CMSIS/: core_cm3.c
Working/Excluded/: README.txt  Touch2.c  Touch2.h
Working/Inc_ethernet/: ethernetif.h  lwipopts.h  main_ethernet.h  modbus_client.h  stm32f1xx_hal.h  stm32f1xx_hal_conf.h
Working/Include_Files/: Adc_Read.h  Button.h  Communication.h  CurrentSorceTrans.h  DAC7512Interface.h  Display.h  Flash.h  Initialize.h  Interrupt.h  Main.h  MicroSd.h  NAND.h  NANDDisplay.h  NandInterface.h  RTC_NTP_SYNC_PROPOSAL.md  RTC_Time.h  ReDisplay.h  Sensor_Manager.h  Touch2.h  Watchdog.h  display_update.h  eeprom.h  history.h  sdio_sd.h  sensor_adc.h  sensor_autodetect.h  sensor_ec.h  sensor_ph.h  serial.h  stm32f10x_conf.h  tft.h  ui_mode.h
Working/Source_Files/: Adc_Read.c  Button.c  Communication - 복사본.c  Communication.c  CurrentSorceTrans - 복사본.c2  CurrentSorceTrans.c  CurrentSorceTrans.c.bak2  DAC7512Interface.c  Display.c  Flash.c  Initialize.c  Interrupt.c  MicroSd.c  NAND.c  NANDDisplay.c  NandInterface.c  RTC_Time.c  ReDisplay.c  ReDisplay_ch1.c  ReDisplay_ch2.c  ReDisplay_ch4.c  Sensor_Manager.c  Tft.c  Touch2.c  Watchdog.c  display_icon.c  display_update.c  eeprom.c  icon_ch2_ch4.c  main.c  sdio_sd.c  sensor_adc.c  sensor_autodetect.c  sensor_ec.c  sensor_ph.c  serial.c  ui_mode.c
Working/image/: back_corner.h  back_corner2.h
Working/sensor/: sensor_driver.h  sensor_manager.c  sensor_manager.h
Working/source_ethernet/: app_ethernet.c  ethernetif_1.c  main_ethernet.c  modbus_client.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscalls.c  system_stm32f1xx.c
(+8 files in other folders)
